[package]
name = "otter-solana-verify"
version = "1.0.2"
edition = "2021"
license = "MIT"
description = "OtterSec Solana formal verification macros"
homepage = "https://osec.io"
readme = "README.md"
repository = "https://github.com/otter-dev/verify"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.23"
